# Fillit

./: .test.swp  CMakeLists.txt  Fillit.xml  Map.xml  a.out  checker.c  create_area.c  error.c  fill_it.c  fillit.h  free_lst.c  list_figurs.c  main.c  root.c  test
libft/: ft_memalloc.c  ft_strjoin.c  ft_strncat.c  ft_strnjoin.c  ft_strsub.c  libft.h.gch
